<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Violeta1"
    tools:context=".BuscarGrupo">

    <EditText
        android:id="@+id/etPlaya"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="63dp"
        android:ems="10"
        android:hint="@string/txtEscribirPlaya"
        android:inputType="textPersonName" />

    <Spinner
        android:id="@+id/spnProvincia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="171dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="0dp" />

    <TextView
        android:id="@+id/tvProvincia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/spnProvincia"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="-171dp"
        android:text="@string/txtProvincia"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/tvPlayas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="230dp"
        android:text="@string/txt_PlayasProvincia"
        android:layout_alignParentLeft="true" />

    <Spinner
        android:id="@+id/spnPlaya"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvPlayas"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true" />

    <Button
        android:id="@+id/btnBuscarPlaya"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/animacion_cambio_color_boton"
        android:text="@string/btnBuscarPlaya"
        android:textColor="@color/Violeta1" />

    <ImageView
        android:id="@+id/ImagenFlecja"
        android:layout_width="49dp"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="6dp"
        app:srcCompat="@drawable/flecha"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="0dp" />

</RelativeLayout>