<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Violeta1"
    android:padding="16sp"
    tools:context=".LogIn">

    <Button
        android:id="@+id/btnIniciarSesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"

        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginBottom="227dp"
        android:background="@drawable/animacion_cambio_color_boton"
        android:foregroundGravity="center_horizontal"
        android:onClick="irMenu"
        android:text="@string/btn_inciar_sesion"
        android:textColor="@color/Violeta1"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/etUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="150dp"
        android:ems="10"
        android:hint="@string/et_usuario"
        android:inputType="textPersonName"
        android:textColor="@color/Violeta5"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etContrasenia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="291dp"
        android:ems="10"
        android:hint="@string/et_contraseña"
        android:inputType="textPassword"
        android:textColor="@color/Violeta5" />

    <ImageView
        android:id="@+id/ivIconoLogin"
        android:layout_width="173dp"
        android:layout_height="118dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="88dp"
        android:layout_marginRight="88dp"
        app:srcCompat="@drawable/ultimo_icono" />

</RelativeLayout>